responsive issue fix

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -464,10 +464,12 @@
     .navbar-nav {
         -webkit-animation-name: none;
         animation-name: none;
-        border-right: 1px solid rgba(255, 255, 255, 0.6);
+        /* border-right: 1px solid rgba(255, 255, 255, 0.6); */
         float: left;
         text-align: center;
-        width: 50%;
+        /* width: 50%; */
+        border-right: 0 none;
+        width: 100%;
     }
     .navbar-nav:last-child {
         border: 0;
