--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8722,6 +8722,20 @@ border-radius: 20px;
   margin-right: 8px;
   margin-top: -2px;
 }
+
+/* chnage placeholder color */
+input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: red;
+  opacity: 1; /* Firefox */
+}
+
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: red;
+}
+
+input::-ms-input-placeholder { /* Microsoft Edge */
+  color: red;
+}
 /* On screens that are 1460px or less, set the background color to olive */
 @media screen and (max-width: 1460px) {
   .learn_section {
