--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7891,7 +7891,7 @@ span.statcounter {
 .investment_backgrnd {
   background: linear-gradient(120.36deg, #22292e 59.96%, #251a43 92.02%);
   border-radius: 47px;
-  padding: 50px;
+  padding: 0px 50px 0px 50px;
 }
 .linear_back {
   border-radius: 52px;
@@ -8176,7 +8176,7 @@ html.w-mod-touch * {
 }
 
 .section_subheader {
-  font-size: 36px;
+  font-size: 30px;
   font-weight: bold;
   color: white;
   line-height: 50px;
@@ -8186,7 +8186,7 @@ html.w-mod-touch * {
   background: #2c353d;
   padding: 30px;
   border-radius: 20px;
-  width: 90%;
+  width: 92%;
   display: flex;
 }
 
@@ -8234,8 +8234,8 @@ html.w-mod-touch * {
   /* width: 70%;
   margin-top: -50px; */
   /* height: 200px; */
-  width: 300px;
-  margin-top: -50px;
+  width: 255px;
+  margin-top: -20px;
 }
 .mb_100{
  margin-bottom: 100px;
@@ -8258,9 +8258,21 @@ html.w-mod-touch * {
  .line_height_25{
   line-height: 25px;
  }
+ .offr_height_clor{
+   line-height: 25px;
+   color: white;
+ }
  .gateWay_flex_inner_header_18{
    font-size: 18px;
    color: white;
+ }
+ .gateWay_flex_inner_header_16{
+  font-size: 16px;
+  color: white;
+}
+ .aboutimg2{
+  margin-top: -125px;
+  width: 280px;
  }
 @supports (animation-timeline: works) {
   @scroll-timeline cards-element-scrolls-in-body {
