--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8812,7 +8812,7 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   color: red;
 }
 .luxury_goods_bg {
-  background: url('/assets/images/luxury_bggg.png');
+  background: url('/assets/images/luxury_bggg.webp');
   background-size: cover;
   background-position: center center;
 }
