--- a/assets/css/intlTelInput.css
+++ b/assets/css/intlTelInput.css
@@ -924,7 +924,7 @@
   background-position: 20px 0; }
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     .iti__flag {
-      background-image: url("../images/flags@2x.png"); } }
+      background-image: url("../images/flags@2x.webp"); } }
 
 .iti__flag.iti__np {
   background-color: transparent; }
