--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7596,6 +7596,9 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   width: 80%;
   margin-left: -83px;
 }
+.img_mobile_tag{
+  display: none;
+}
 .fixed-top{
   background: rgba(0, 0, 0, 0.2);
   /* padding: 15px 50px; */
@@ -7961,6 +7964,11 @@ input::-ms-input-placeholder { /* Microsoft Edge */
  .img_tag{
    display: none;
  }
+ .img_mobile_tag{
+  display: block;
+  margin-left: -2px;
+  margin-top: -13px;
+}
  .mt_20_mbl{
   margin-top: 20px;
 }
