add new home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7702,6 +7702,15 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   display: block;
 }
 
+.footer_title_home {
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  position: relative;
+  text-transform: uppercase;
+}
+
 /* On screens that are 1460px or less, set the background color to olive */
 @media screen and (max-width: 1460px) {
   .learn_section {
@@ -8013,4 +8022,5 @@ input::-ms-input-placeholder { /* Microsoft Edge */
     align-items: flex-start;
   } */
 }
+
 
