--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ Version      : 1.7
 body {
   background: #ffffff none repeat scroll 0 0;
   color: #7a7a7a;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Inter', sans-serif;;
   font-size: 16px;
   font-weight: 400;
   line-height: 30px;
@@ -6906,6 +6906,7 @@ html.w-mod-touch * {
   font-weight: bold;
   color: white;
   line-height: 40px;
+  font-family: 'Red Hat Display', sans-serif;
 }
 
 .section_subheader {
@@ -7002,6 +7003,8 @@ html.w-mod-touch * {
  .gateWay_flex_inner_header_16{
   font-size: 16px;
   color: white;
+  font-family: 'Red Hat Display', sans-serif;
+  font-weight: 500;
 }
  .aboutimg2{
   margin-top: -62px;
