--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6989,6 +6989,9 @@ html.w-mod-touch * {
  .mt_80{
    margin-top: 80px;
  }
+ .mb_60{
+  margin-bottom: 60px;
+}
  .line_height_25{
   line-height: 25px;
  }
