--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8106,3 +8106,17 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   align-items: center;
   border-radius: 5px;
 }
+.clr_gray{
+  color: rgba(127, 132, 136, 1);
+}
+.fnt_18{
+  font-size: 18px;
+}
+
+.fnt_600{
+  font-weight: 600;
+}
+
+.gray_button{
+  background: rgba(0, 0, 0, 0.2);
+}
